Started integrating spring security in the project