@@ -11,7 +11,6 @@ import bg.softuni.springbootintroduction.domain.view.OfferViewModel;
 import bg.softuni.springbootintroduction.repositories.ModelRepository;
 import bg.softuni.springbootintroduction.repositories.OfferRepository;
 import bg.softuni.springbootintroduction.repositories.UserRepository;
-import bg.softuni.springbootintroduction.security.CurrentUser;
 import bg.softuni.springbootintroduction.services.OfferService;
 import bg.softuni.springbootintroduction.utils.enums.Engine;
 import bg.softuni.springbootintroduction.utils.enums.Role;
@@ -21,9 +20,11 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
+import java.security.Principal;
 import java.time.Instant;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class OfferServiceImpl implements OfferService {
@@ -32,15 +33,13 @@ public class OfferServiceImpl implements OfferService {
     private final ModelRepository modelRepository;
     private final UserRepository userRepository;
     private final ModelMapper mapper;
-    private final CurrentUser currentUser;
 
     @Autowired
-    public OfferServiceImpl(OfferRepository offerRepository, ModelRepository modelRepository, UserRepository userRepository, ModelMapper mapper, CurrentUser currentUser) {
+    public OfferServiceImpl(OfferRepository offerRepository, ModelRepository modelRepository, UserRepository userRepository, ModelMapper mapper) {
         this.offerRepository = offerRepository;
         this.modelRepository = modelRepository;
         this.userRepository = userRepository;
         this.mapper = mapper;
-        this.currentUser = currentUser;
     }
 
     @Override
@@ -95,11 +94,11 @@ public class OfferServiceImpl implements OfferService {
         return allOffers
                 .stream()
                 .map(o -> this.mapper.map(o, OfferViewModel.class))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
-    public void addOffer(OfferSubmitBindingModel offerSubmitBindingModel) {
+    public void addOffer(OfferSubmitBindingModel offerSubmitBindingModel, Principal principal) {
         Model model = this.modelRepository
                 .findFirstByName(offerSubmitBindingModel.getModel());
 
@@ -108,7 +107,7 @@ public class OfferServiceImpl implements OfferService {
         offer.setModel(model);
         offer.setCreated(Instant.now());
 
-        Optional<User> seller = this.userRepository.findFirstByUsernameIgnoreCase(currentUser.getUsername());
+        Optional<User> seller = this.userRepository.findFirstByUsernameIgnoreCase(principal.getName());
 
         seller.ifPresent(offer::setSeller);
 
@@ -133,38 +132,38 @@ public class OfferServiceImpl implements OfferService {
 
         this.offerRepository.save(offer);
     }
-
-    @Override
-    public boolean isCurrentUserAdmin() {
-        Optional<User> loggedInUser = this.userRepository.findFirstByUsernameIgnoreCase(currentUser.getUsername());
-
-        if (loggedInUser.isEmpty()) {
-            return false;
-        }
-
-        Role loggedInUserRole = loggedInUser.get().getRole().getRole();
-
-        return loggedInUserRole.equals(Role.Admin);
-    }
-
-    @Override
-    public boolean canCurrentUserModifyGivenOffer(Long offerId) {
-        Offer offer = getOfferById(offerId);
-
-
-        OfferDetailsViewModel offerDetails = mapper.map(offer, OfferDetailsViewModel.class);
-        ;
-
-        boolean isAnonymous = currentUser.getUsername().equals("anonymous");
-
-        if (offerDetails.getSellerUsername() == null && isAnonymous) {
-            return true;
-        } else if (offerDetails.getSellerUsername() == null && isCurrentUserAdmin()) {
-            return true;
-        } else if (offerDetails.getSellerUsername() == null && !isAnonymous) {
-            return false;
-        }
-
-        return isCurrentUserAdmin() || offerDetails.getSellerUsername().equals(currentUser.getUsername());
-    }
+//
+//    @Override
+//    public boolean isCurrentUserAdmin() {
+//        Optional<User> loggedInUser = this.userRepository.findFirstByUsernameIgnoreCase(currentUser.getUsername());
+//
+//        if (loggedInUser.isEmpty()) {
+//            return false;
+//        }
+//
+//        Role loggedInUserRole = loggedInUser.get().getRole().getRole();
+//
+//        return loggedInUserRole.equals(Role.Admin);
+//    }
+//
+//    @Override
+//    public boolean canCurrentUserModifyGivenOffer(Long offerId) {
+//        Offer offer = getOfferById(offerId);
+//
+//
+//        OfferDetailsViewModel offerDetails = mapper.map(offer, OfferDetailsViewModel.class);
+//        ;
+//
+//        boolean isAnonymous = currentUser.getUsername().equals("anonymous");
+//
+//        if (offerDetails.getSellerUsername() == null && isAnonymous) {
+//            return true;
+//        } else if (offerDetails.getSellerUsername() == null && isCurrentUserAdmin()) {
+//            return true;
+//        } else if (offerDetails.getSellerUsername() == null && !isAnonymous) {
+//            return false;
+//        }
+//
+//        return isCurrentUserAdmin() || offerDetails.getSellerUsername().equals(currentUser.getUsername());
+//    }
 }
